--- a/plain/main.tex
+++ b/plain/main.tex
@@ -6,7 +6,7 @@
 \setlength{\parskip}{0.05in}
 
 %===============================================================================
-%    Titles, etc.
+%    Libralies and utilities.
 %===============================================================================
 \usepackage{styles/include}
 \usepackage{styles/theorem}
@@ -14,7 +14,9 @@
 \usepackage{styles/utilities}
 \usepackage{styles/variables}
 
-% Header
+%===============================================================================
+%    Titles, header and footer.
+%===============================================================================
 \newcommand\doctitle{Document Title}
 \newcommand\authorname{*Insert your name*}
 
